Fix monthly archive 'calendar chit' row alignment error in IE7

--- a/css/default.css
+++ b/css/default.css
@@ -361,24 +361,30 @@ dt {
     padding:5px 0 10px;
 }
 
-#sidebar #monthly-list a {
+#sidebar #monthly-list li {
     text-align:center;
-    text-decoration:none;
     float:left;
     display:block;
     margin:0 4px 6px 0;
     min-width:36px;
     border:1px solid #ccc;
     border-radius:5px;
-    color:#444;
     background:#fff;
     -webkit-box-shadow:2px 2px 2px rgba(99,102,112,.2);
             box-shadow:2px 2px 2px rgba(99,102,112,.2);
 }
 
+#sidebar #monthly-list li:hover {
+    background:#fdf8eb;
+}
+
+#sidebar #monthly-list a {
+    text-decoration:none;
+    color:#444;
+}
+
 #sidebar #monthly-list a:hover {
     color:#000;
-    background:#fdf8eb;
 }
 
 #monthly-list span {
